Resolves issue where images were getting cutoff in table
Issue: https://github.com/vertikoff/ImageUploadFrontEnd/issues/40

--- a/image-process-front-end/src/App.css
+++ b/image-process-front-end/src/App.css
@@ -51,6 +51,9 @@
 .revert-btn:hover{
   background: #ff1a1a;
 }
+td > img{
+  max-width: 100%
+}
 
 td{
   word-wrap: break-word;
